--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Md Farhad- Pro in Web Develpment</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" type="image/jpg" href="Images/md_farhad_favicon.jpg">
+    <link rel="icon" type="image/jpg" href="images/md_farhad_favicon.jpg">
 </head>
 <body>
     <section>
@@ -20,7 +20,7 @@
                     <a class="btn" href="www.facebook.com/farhadmd6">HIRE ME</a>
                 </div>
                 <div class="col-md-1-1 align">
-                    <img src="images/jhankar.png" alt="">
+                    <img src="images/jhankar.png" alt="jhankarvai chobi">
                 </div>
             </div>
         </div>
